--- a/Solver/Solver.vcxproj
+++ b/Solver/Solver.vcxproj
@@ -131,10 +131,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Class.h" />
     <ClInclude Include="Student.h" />
+    <ClInclude Include="Subject.h" />
+    <ClInclude Include="Teacher.h" />
+    <ClInclude Include="Timetable.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Class.cpp" />
     <ClCompile Include="Student.cpp" />
+    <ClCompile Include="Subject.cpp" />
+    <ClCompile Include="Teacher.cpp" />
+    <ClCompile Include="Timetable.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
